# Artificial_Neural_Network

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
Artificial_Neural_Network/: __init__.py  linearregression.py  logisticregession.py  softmaxregression.py  tanhiperboliqueregression.py
Artificial_Neural_Network_Classifier/: __init__.py  lineardiscriminantanalysis.py  tanhiperboliqueregression.py
image/: README.md
