[project]
name = "Artificial_Neural_Network_Classifier"
version = "1.0.0"
authors = [
  { name="Ouedraogo Somkieta Rahim Alex", email="s.r.a.ouedraogo@gmail.com" },
]
description = "Artificial Neural Network, is a deep learning API written in Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    'importlib-metadata; python_version<"3.7"',
]

[project.urls]
"Homepage" = "https://github.com/somkietacode/Artificial_Neural_Network"
"Bug Tracker" = "https://github.com/somkietacode/Artificial_Neural_Network/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"



