[metadata]
name = artificial neural network classifier
description = Powerful neural network classifier
long_description = file: README.md
long_description_content_type = text/markdown
author = The artificial neural network developpement team
author_email = somkietacode@python.org
license = GNU
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/somkietacode/Artificial_Neural_Network/issues
    Documentation = https://pandas.pydata.org/artificial_neural_network/stable
    Source Code = https://github.com/somkietacode/Artificial_Neural_Network
[options]
packages = find:
install_requires =
    numpy>=1.20.3; python_version<'3.10'
    numpy>=1.21.0; python_version>='3.10'
python_requires = >=3.8

